--- a/prefresh-midnight.theme.main.css
+++ b/prefresh-midnight.theme.main.css
@@ -1,5 +1,5 @@
 /**
- * @name TESTprefresh-midnight
+ * @name Prefresh-Midnight
  * @description A pre-refresh familiar, rounded discord theme. Tweaked by IyeViking
  * @author refact0r - Tweaked by IyeViking
  * @version 2.0.0
