--- a/midnight-prefresh.theme.css
+++ b/midnight-prefresh.theme.css
@@ -1,6 +1,6 @@
 /**
  * @name Midnight Prefresh
- * @description A Pre-Refresh familiar, QOL, rounded discord theme. Tweaked by IyeViking
+ * @description A Pre-Refresh familiar, QOL, rounded discord theme that mimics the old colours from before the Visual Refresh.
  * @author refact0r - IyeViking
  * @version 1.0.0
  * @source https://github.com/IyeViking/Midnight-Prefresh-Discord-Theme/raw/main/build/prefresh-midnight-main.css
